task 10 Calculate services
